--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.7.2",
+    "@types/web3": "^1.0.19",
     "fs-extra": "^8.1.0",
-    "solc": "^0.5.11"
+    "ganache-cli": "^6.6.0",
+    "mocha": "^6.2.0",
+    "solc": "^0.5.11",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.2.1"
   }
 }
